--- a/src/main/webapp/WEB-INF/views/customer/create.html
+++ b/src/main/webapp/WEB-INF/views/customer/create.html
@@ -6,7 +6,7 @@
 <body>
 <h3>Add Customer</h3>
 <p>
-    <a th:href="@{/customers/management}">
+    <a th:href="@{/customer/management}">
         Back to customer list
     </a>
 </p>
@@ -17,18 +17,23 @@
         <div>
             <label for="name">name</label>
             <input type="text" id="name" th:field="*{cusName}"/>
+            <span th:if="${#fields.hasErrors('cusName')}" th:errors="*{cusName}">Name Error</span>
         </div>
         <div>
             <label for="email">email</label>
             <input type="text" id="email" th:field="*{cusEmail}"/>
+            <span th:if="${#fields.hasErrors('cusEmail')}" th:errors="*{cusEmail}">Email Error</span>
         </div>
         <div>
             <label for="address">address</label>
             <input type="text" id="address" th:field="*{cusAddress}"/>
+            <span th:if="${#fields.hasErrors('cusAddress')}" th:errors="*{cusAddress}">Address Error</span>
+
         </div>
         <div>
             <label for="phone">phone</label>
             <input type="text" id="phone" th:field="*{cusPhone}"/>
+            <span th:if="${#fields.hasErrors('cusPhone')}" th:errors="*{cusPhone}">Phone Error</span>
         </div>
         <div>
             <label for="birthday">birthday</label>
